--- a/src/style/login.css
+++ b/src/style/login.css
@@ -1,20 +1,20 @@
 .background{
     background-color: rgb(88, 103, 107);
-    height: 100%;
+    height: calc(100%);
     width: 100%;
     display: flex;
     align-items: center;
     align-content: center;
     justify-content: center;
-    background-image: url('./backimg2.jpg') ;
+    background-image: url('../img/backgroundImg.jpg') ;
 }
-.form-window{
+.log-form-window{
     align-self: center;
     background-color: rgb(197, 212, 226);
     border: 2px solid rgb(183, 200, 204);
     border-radius: 10px ;
     display: flex;
-    width: 400px;
+    width: 420px;
     height: 350px;
     flex-wrap: nowrap;
     flex-direction: column;
@@ -25,6 +25,7 @@
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
     font-size: 14px;
     flex-flow: row;
 
@@ -45,7 +46,7 @@ form{
 }
 input{
     display: block;
-    width: 250px;
+    width: 280px;
     height: 30px;
     margin: 10px 5px ;
     font-size: 15px;
@@ -60,7 +61,7 @@ input{
 }
 
 .form-submit-but{
-    width: 130px;
+    width: 120px;
     background-color: rgb(65, 231, 43);
     font-size: 20px;
     border-radius: 5px;
@@ -73,8 +74,12 @@ input{
 .form-submit-but:hover{
     opacity: 0.8;
 }
-.go-to-signup{
-    margin-left: 10px;
-    margin-right: 15px; 
+strong:hover{
+    text-decoration: underline;
+    cursor: pointer;
 }
+/*.go-to-signup{
+    margin-left: 20px;
+    margin-right: 40px; 
+}*/
 
