--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -1,39 +1,50 @@
 .backdiv{
+    display: block;
+    height: 70px;
+}
+.ul-nav{
+    margin: 0px;
+    list-style: none;
+    padding-left: 0px;
+    position: fixed;
     width: 100%;
     height: 70px;
     background-color: rgb(131, 241, 116);
-    display: flex;
-    flex-direction: row;
-
+    top: 0;
 }
-.nav-title{
-    width: 3fr;
-    margin-left: 20px;
+.li-nav{
+    display:block;
+    padding: 10px;
+    font-size: larger;
+    font-weight: 520;
+    margin: 0px;
+    float: left;
 }
-.nav-div{
-    width: 240px;
-    height: 100%;
+.user{
     display:flex;
     align-items: center;
-    justify-content: center;
+    justify-content:center ;
 }
-.profile{
-    width: 300px;
-    justify-content: end;
+.user1{
+    float: right;
+    display:block;
+    padding: 10px;
+    font-size: larger;
+    font-weight: 520;
+    margin-top: 3px;
 }
-.profile-pic-div{
-    width: 40px;
-    height: 40px;
-    border-radius: 40px;
-    background-color: grey;
-    margin-right: 25px ;
-    margin-left: 15px;
+.li-nav:hover{
+    background-color:rgb(27, 168, 5) ;
+    cursor: pointer;
 }
 .profile-pic{
     width: 40px;
     height: 40px;
     border-radius: 30px;
     background-color: grey;
-    margin-right: 25px ;
-    margin-left: 15px;
+    margin-right: 20px ;
+    margin-left: 10px;
+}
+.profile-pic:hover{
+    cursor : pointer;
 }
