--- a/src/style/signup.css
+++ b/src/style/signup.css
@@ -1,7 +1,7 @@
 .sign-form-window{
     align-self: center;
-    background-color: rgb(197, 212, 226);
-    border: 2px solid rgb(183, 200, 204);
+    background-color: rgba(51, 138, 51, 0.884);
+    border: 2px solid rgb(183, 200, 204,0.5);
     border-radius: 10px ;
     display: flex;
     width: 420px;
@@ -16,7 +16,9 @@ select{
     font-weight: light;
     padding-bottom: 5px;
     height: 28px;
+    background-color: aliceblue;
     margin-left: 15px ;
+    border-radius: 3px;
 }
 .gender-div{
     width: 300px;
