--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -8,7 +8,7 @@
 .profile-background-pic{
     width: 100%;
     height: 400px;
-    margin-bottom: 65px;
+    margin-bottom: 90px;
     background-color: black;
     background-image: url('../img/backgroundImg.jpg');
 }
@@ -19,21 +19,22 @@
     width: 100%;
     display: flex;
     align-items: end;
-    height: calc(100% + 55px);
+    height: calc(100% + 90px);
     z-index: 10;
 }
 .profile-img-div{
-    width: 150px;
-    height: 150px;
+    width: 230px;
+    height: 230px;
     border-radius: 100%;
     border: 2px solid white;
+    margin-left: 20px;
     background-color: rgba(8, 12, 12, );
 }
 .profile-img{
     border: none;
     border-radius: 100%;
-    width: 150px;
-    height: 150px;
+    width: 230px;
+    height: 230px;
 }
 .profile-information{
     width: 100%;
@@ -57,29 +58,29 @@
     display: inline-block;
     margin: 0px;
     width: 300px;
-    overflow: scroll;
-    padding: 5px;
+    padding: 10px;
     border-radius: 10px;
     background-color: rgb(155, 153, 153,0.5);
+    overflow-wrap: break-word;
 }
 .info-div{
     width: 784px;
     display: flex;
     flex-flow: row nowrap;
-    align-items: center;
-   /* border: 2px solid grey;*/
+    align-items: flex-start;
     border-radius: 10px;
 }
 .ul-bio{
     width: calc(100% - 40px);
     margin: 0px;
     margin-right: 55px;
+    list-style: none;
 
 }
 .p-fieldtext{
     text-justify: distribute;
-    padding: 5px 10px ;
-    font-size: 20px;
+    padding: 10px ;
+    font-size: 18px;
     border-radius: 10px;
     background-color: rgb(155, 153, 153,0.5);
 }
