--- a/src/style/dashboard.css
+++ b/src/style/dashboard.css
@@ -17,12 +17,13 @@
 }
 .part{
     width: 150px;
-    font-size: 27px;
+    font-size: 25px;
     font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    flex-flow: column nowrap;
+    height: 65px;
     margin: 10px;
     border-radius: 10px;
     color: whitesmoke;
@@ -33,4 +34,21 @@
     opacity: 0.75;
     cursor: pointer;
     box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.2);
+    color: black;
+}
+.part-button-div{
+    display: flex;
+    width: 100%;
+    justify-content:space-around;
+}
+.info-icon{
+    border-radius:2px;
+    padding: 4px;
+    height: 15px;
+    background-color: transparent;
+
+
+}
+.info-icon:hover{
+    opacity: 0.5;
 }
