--- a/src/style/dashboard.css
+++ b/src/style/dashboard.css
@@ -19,16 +19,18 @@
     width: 150px;
     font-size: 25px;
     font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column nowrap;
     height: 65px;
     margin: 10px;
     border-radius: 10px;
     color: whitesmoke;
     border: 1px solid rgb(27, 168, 5);
-    background-color: rgb(27, 168, 5)/*rgb(100, 212, 86)*/;
+    background-color: rgb(27, 168, 5);
+}
+.part-default{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: end;
+    height: 70%;
 }
 .part:hover{
     opacity: 0.75;
@@ -44,11 +46,30 @@
 .info-icon{
     border-radius:2px;
     padding: 4px;
-    height: 15px;
+    height: 18px;
     background-color: transparent;
-
-
 }
 .info-icon:hover{
     opacity: 0.5;
+}
+.info-div{
+    position: relative;
+    z-index: 1;
+    color: black;
+    text-align: center;
+    background-color: white;
+    width: 200px;
+    height: 50px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-wrap:  wrap;
+    border: 1px solid;
+    bottom:-5px;
+    left: 10px;
+}
+.info-span{
+    width: 100%;
+    padding: 10px 10px;
 }
