--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -7,6 +7,7 @@
     list-style: none;
     padding-left: 0px;
     position: fixed;
+    z-index: 5;
     width: 100%;
     height: 70px;
     background-color: rgb(27, 168, 5);
