--- a/src/style/login.css
+++ b/src/style/login.css
@@ -1,12 +1,12 @@
 .background{
     background-color: rgb(88, 103, 107);
-    height: calc(100%);
+    height: 110vh;
     width: 100%;
     display: flex;
     align-items: center;
-    align-content: center;
     justify-content: center;
     background-image: url('../img/backgroundImg.jpg') ;
+    margin-top: 70px ;
 }
 .log-form-window{
     align-self: center;
@@ -28,8 +28,6 @@
     justify-content: center;
     font-size: 14px;
     flex-flow: row;
-
-    
 }
 form{
     display: inline-flex;
