--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -1,25 +1,37 @@
 .backdiv{
     display: block;
     height: 70px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 5;
 }
 .ul-nav{
     margin: 0px;
+    border-bottom: 1px solid rgb(13, 73, 13) ;
     list-style: none;
     padding-left: 0px;
-    position: fixed;
-    z-index: 5;
     width: 100%;
     height: 70px;
-    background-color: rgb(27, 168, 5);
+    background-color: rgb(238, 243, 235);
     top: 0;
+    box-shadow: 0px 0px 10px 2px #888888;
 }
 .li-nav{
     display:block;
     padding: 10px;
+    padding-bottom: 8px;
     font-size: 25px;
     font-weight: 520;
     margin: 0px;
     float: left;
+    font-family: kufam;
+}
+.title{
+    font-size: 30px;
+    padding-bottom: 7px;
+    padding-top: 8px;
+    font-weight: 500;
 }
 .user{
     display:flex;
@@ -35,9 +47,8 @@
     margin-top: 3px;
 }
 .li-nav:hover{
-    background-color:rgb(100, 212, 86) ;
     cursor: pointer;
-    color: aliceblue;
+    color: green;
 }
 .profile-pic{
     width: 40px;
